@@ -195,10 +195,10 @@ endif !STANDALONE
 # XXX later the C++ stuff will be in libdw.so directly
 libdwpp = ../libdw/libdwpp.a $(libdw)
 
-dwarf_print_SOURCES = dwarf-print.cc
+dwarf_print_SOURCES = dwarf-print.cc print-die.cc
 dwarf_print_LDADD = $(libdwpp) $(libmudflap) -ldl
 
-dwarf_edit_SOURCES = dwarf_edit.cc
+dwarf_edit_SOURCES = dwarf_edit.cc print-die.cc
 dwarf_edit_LDADD = $(libdwpp) $(libmudflap) -ldl
 
 arextract_LDADD = $(libelf) $(libmudflap)
